@@ -36,7 +36,7 @@ PlayerVideoFrame::PlayerVideoFrame (
 	Scaler const * scaler,
 	Eyes eyes,
 	Part part,
-	ColourConversion colour_conversion
+	boost::optional<ColourConversion> colour_conversion
 	)
 	: _in (in)
 	, _crop (crop)
@@ -59,7 +59,7 @@ PlayerVideoFrame::PlayerVideoFrame (shared_ptr<cxml::Node> node, shared_ptr<Sock
 	_scaler = Scaler::from_id (node->string_child ("Scaler"));
 	_eyes = (Eyes) node->number_child<int> ("Eyes");
 	_part = (Part) node->number_child<int> ("Part");
-	_colour_conversion = ColourConversion (node);
+	_colour_conversion = ColourConversion::from_xml (node);
 
 	_in = image_proxy_factory (node->node_child ("In"), socket, log);
 
@@ -129,7 +129,9 @@ PlayerVideoFrame::add_metadata (xmlpp::Node* node) const
 	node->add_child("Scaler")->add_child_text (_scaler->id ());
 	node->add_child("Eyes")->add_child_text (raw_convert<string> (_eyes));
 	node->add_child("Part")->add_child_text (raw_convert<string> (_part));
-	_colour_conversion.as_xml (node);
+	if (_colour_conversion) {
+		_colour_conversion.get().as_xml (node);
+	}
 	if (_subtitle_image) {
 		node->add_child ("SubtitleWidth")->add_child_text (raw_convert<string> (_subtitle_image->size().width));
 		node->add_child ("SubtitleHeight")->add_child_text (raw_convert<string> (_subtitle_image->size().height));
